--- a/GitHubApp/RepoList/RepoListUserCell.xib
+++ b/GitHubApp/RepoList/RepoListUserCell.xib
@@ -4,37 +4,127 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="RepoListUserCell" customModule="GitHubApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="206" id="KGk-i7-Jjw" customClass="RepoListUserCell" customModule="GitHubApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="206"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="206"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tg9-ji-fZ5">
-                        <rect key="frame" x="8" y="8" width="304" height="28"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="qyB-dD-GU3">
+                        <rect key="frame" x="-34" y="8" width="388" height="190"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="ekU-gq-ktT">
+                                <rect key="frame" x="146" y="1.5" width="96" height="93"/>
+                                <color key="tintColor" systemColor="systemGray2Color"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="96" id="afH-Zz-dVc"/>
+                                    <constraint firstAttribute="width" constant="96" id="w9M-xs-JMF"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="b4u-HW-oqC">
+                                <rect key="frame" x="0.0" y="111.5" width="388" height="78.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tg9-ji-fZ5">
+                                        <rect key="frame" x="0.0" y="0.0" width="388" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="qm4-3e-Dnt">
+                                        <rect key="frame" x="0.0" y="28.5" width="388" height="50"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cfF-I5-Mzf">
+                                                <rect key="frame" x="0.0" y="0.0" width="192" height="50"/>
+                                                <subviews>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="o3A-Cp-Aot">
+                                                        <rect key="frame" x="0.0" y="0.0" width="192" height="50"/>
+                                                        <subviews>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Q5-oT-L6v">
+                                                                <rect key="frame" x="0.0" y="0.0" width="9" height="50"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                                <nil key="textColor"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="followers" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nkh-7j-PQg">
+                                                                <rect key="frame" x="141" y="0.0" width="51" height="50"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                                <nil key="textColor"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                        </subviews>
+                                                    </stackView>
+                                                </subviews>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstItem="o3A-Cp-Aot" firstAttribute="leading" secondItem="cfF-I5-Mzf" secondAttribute="leading" id="1CG-CW-wtj"/>
+                                                    <constraint firstAttribute="trailing" secondItem="o3A-Cp-Aot" secondAttribute="trailing" id="5u5-Zh-8Zl"/>
+                                                    <constraint firstAttribute="bottom" secondItem="o3A-Cp-Aot" secondAttribute="bottom" id="CJ6-3c-868"/>
+                                                    <constraint firstItem="o3A-Cp-Aot" firstAttribute="top" secondItem="cfF-I5-Mzf" secondAttribute="top" id="vhK-2x-FSs"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Z7H-xm-cQL">
+                                                <rect key="frame" x="196" y="0.0" width="192" height="50"/>
+                                                <subviews>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="PqQ-PG-LaR">
+                                                        <rect key="frame" x="0.0" y="0.0" width="192" height="50"/>
+                                                        <subviews>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oyJ-0Z-3px">
+                                                                <rect key="frame" x="0.0" y="16.5" width="9" height="17"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                                <nil key="textColor"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="following" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Thx-4f-gMH">
+                                                                <rect key="frame" x="141" y="18" width="51" height="14.5"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                                <nil key="textColor"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                        </subviews>
+                                                    </stackView>
+                                                </subviews>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstItem="PqQ-PG-LaR" firstAttribute="leading" secondItem="Z7H-xm-cQL" secondAttribute="leading" id="42t-qe-hoO"/>
+                                                    <constraint firstAttribute="bottom" secondItem="PqQ-PG-LaR" secondAttribute="bottom" id="BHP-QC-1L6"/>
+                                                    <constraint firstItem="PqQ-PG-LaR" firstAttribute="top" secondItem="Z7H-xm-cQL" secondAttribute="top" id="FgE-r9-nyo"/>
+                                                    <constraint firstAttribute="trailing" secondItem="PqQ-PG-LaR" secondAttribute="trailing" id="zfm-rY-S5x"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                    </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Tg9-ji-fZ5" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="0SE-jZ-Jg9"/>
-                    <constraint firstAttribute="bottom" secondItem="Tg9-ji-fZ5" secondAttribute="bottom" constant="8" id="6k9-Bm-Dke"/>
-                    <constraint firstItem="Tg9-ji-fZ5" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="Y4F-2a-Ddc"/>
-                    <constraint firstAttribute="trailing" secondItem="Tg9-ji-fZ5" secondAttribute="trailing" constant="8" id="c1J-Jv-4pY"/>
+                    <constraint firstItem="qyB-dD-GU3" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="EEa-Yg-ppx"/>
+                    <constraint firstAttribute="bottom" secondItem="qyB-dD-GU3" secondAttribute="bottom" constant="8" id="ch6-v8-FcA"/>
+                    <constraint firstItem="qyB-dD-GU3" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="gyu-YM-HWN"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="nameLabel" destination="Tg9-ji-fZ5" id="nXX-N5-EU9"/>
             </connections>
-            <point key="canvasLocation" x="139" y="112"/>
+            <point key="canvasLocation" x="137.68115942028987" y="166.07142857142856"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="person.fill" catalog="system" width="128" height="120"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
