--- a/GitHubApp/RepoList/RepoListUserCell/RepoListUserCell.xib
+++ b/GitHubApp/RepoList/RepoListUserCell/RepoListUserCell.xib
@@ -46,8 +46,8 @@
                                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="o3A-Cp-Aot">
                                                         <rect key="frame" x="0.0" y="0.0" width="192" height="50"/>
                                                         <subviews>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Q5-oT-L6v">
-                                                                <rect key="frame" x="0.0" y="0.0" width="9" height="50"/>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Q5-oT-L6v">
+                                                                <rect key="frame" x="0.0" y="0.0" width="6.5" height="50"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
@@ -75,8 +75,8 @@
                                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="PqQ-PG-LaR">
                                                         <rect key="frame" x="0.0" y="0.0" width="192" height="50"/>
                                                         <subviews>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oyJ-0Z-3px">
-                                                                <rect key="frame" x="0.0" y="16.5" width="9" height="17"/>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oyJ-0Z-3px">
+                                                                <rect key="frame" x="0.0" y="16.5" width="6.5" height="17"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
@@ -113,6 +113,8 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="followersLabel" destination="7Q5-oT-L6v" id="rUj-BT-OQC"/>
+                <outlet property="followingLabel" destination="oyJ-0Z-3px" id="Tx3-YX-uVP"/>
                 <outlet property="nameLabel" destination="Tg9-ji-fZ5" id="nXX-N5-EU9"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="166.07142857142856"/>
