--- a/GitHubApp/RepoList/RepoListUserCell/RepoListUserCell.xib
+++ b/GitHubApp/RepoList/RepoListUserCell/RepoListUserCell.xib
@@ -17,8 +17,8 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="206"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="qyB-dD-GU3">
-                        <rect key="frame" x="-34" y="8" width="388" height="190"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="qyB-dD-GU3">
+                        <rect key="frame" x="-34" y="8" width="388" height="182"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="ekU-gq-ktT">
                                 <rect key="frame" x="146" y="1.5" width="96" height="93"/>
@@ -28,8 +28,8 @@
                                     <constraint firstAttribute="width" constant="96" id="w9M-xs-JMF"/>
                                 </constraints>
                             </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="b4u-HW-oqC">
-                                <rect key="frame" x="0.0" y="111.5" width="388" height="78.5"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="b4u-HW-oqC">
+                                <rect key="frame" x="0.0" y="107.5" width="388" height="74.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tg9-ji-fZ5">
                                         <rect key="frame" x="0.0" y="0.0" width="388" height="20.5"/>
@@ -38,7 +38,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="qm4-3e-Dnt">
-                                        <rect key="frame" x="0.0" y="28.5" width="388" height="50"/>
+                                        <rect key="frame" x="0.0" y="24.5" width="388" height="50"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cfF-I5-Mzf">
                                                 <rect key="frame" x="0.0" y="0.0" width="192" height="50"/>
@@ -107,12 +107,13 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="qyB-dD-GU3" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="EEa-Yg-ppx"/>
-                    <constraint firstAttribute="bottom" secondItem="qyB-dD-GU3" secondAttribute="bottom" constant="8" id="ch6-v8-FcA"/>
+                    <constraint firstAttribute="bottom" secondItem="qyB-dD-GU3" secondAttribute="bottom" constant="16" id="ch6-v8-FcA"/>
                     <constraint firstItem="qyB-dD-GU3" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="gyu-YM-HWN"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="avatarImage" destination="ekU-gq-ktT" id="c8F-y2-FW9"/>
                 <outlet property="followersLabel" destination="7Q5-oT-L6v" id="rUj-BT-OQC"/>
                 <outlet property="followingLabel" destination="oyJ-0Z-3px" id="Tx3-YX-uVP"/>
                 <outlet property="nameLabel" destination="Tg9-ji-fZ5" id="nXX-N5-EU9"/>
