--- a/GitHubApp/RepoList/RepoListUserCell/RepoListUserCell.xib
+++ b/GitHubApp/RepoList/RepoListUserCell/RepoListUserCell.xib
@@ -11,93 +11,75 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="206" id="KGk-i7-Jjw" customClass="RepoListUserCell" customModule="GitHubApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="206"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="214"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="206"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="214"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="qyB-dD-GU3">
-                        <rect key="frame" x="-34" y="8" width="388" height="182"/>
+                        <rect key="frame" x="112" y="8" width="96" height="190"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="ekU-gq-ktT">
-                                <rect key="frame" x="146" y="1.5" width="96" height="93"/>
+                                <rect key="frame" x="0.0" y="1.5" width="96" height="93"/>
                                 <color key="tintColor" systemColor="systemGray2Color"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="96" id="afH-Zz-dVc"/>
                                     <constraint firstAttribute="width" constant="96" id="w9M-xs-JMF"/>
                                 </constraints>
                             </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="b4u-HW-oqC">
-                                <rect key="frame" x="0.0" y="107.5" width="388" height="74.5"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="b4u-HW-oqC">
+                                <rect key="frame" x="18.5" y="104" width="59.5" height="86"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tg9-ji-fZ5">
-                                        <rect key="frame" x="0.0" y="0.0" width="388" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="qm4-3e-Dnt">
-                                        <rect key="frame" x="0.0" y="24.5" width="388" height="50"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="45" placeholderIntrinsicHeight="35" axis="vertical" alignment="center" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="3nN-Ah-A9M">
+                                        <rect key="frame" x="7" y="0.0" width="45" height="37"/>
                                         <subviews>
-                                            <view contentMode="scaleToFill" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cfF-I5-Mzf">
-                                                <rect key="frame" x="0.0" y="0.0" width="192" height="50"/>
-                                                <subviews>
-                                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="o3A-Cp-Aot">
-                                                        <rect key="frame" x="0.0" y="0.0" width="192" height="50"/>
-                                                        <subviews>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Q5-oT-L6v">
-                                                                <rect key="frame" x="0.0" y="0.0" width="6.5" height="50"/>
-                                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                                <nil key="textColor"/>
-                                                                <nil key="highlightedColor"/>
-                                                            </label>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="followers" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nkh-7j-PQg">
-                                                                <rect key="frame" x="141" y="0.0" width="51" height="50"/>
-                                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                                                <nil key="textColor"/>
-                                                                <nil key="highlightedColor"/>
-                                                            </label>
-                                                        </subviews>
-                                                    </stackView>
-                                                </subviews>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                                <constraints>
-                                                    <constraint firstItem="o3A-Cp-Aot" firstAttribute="leading" secondItem="cfF-I5-Mzf" secondAttribute="leading" id="1CG-CW-wtj"/>
-                                                    <constraint firstAttribute="trailing" secondItem="o3A-Cp-Aot" secondAttribute="trailing" id="5u5-Zh-8Zl"/>
-                                                    <constraint firstAttribute="bottom" secondItem="o3A-Cp-Aot" secondAttribute="bottom" id="CJ6-3c-868"/>
-                                                    <constraint firstItem="o3A-Cp-Aot" firstAttribute="top" secondItem="cfF-I5-Mzf" secondAttribute="top" id="vhK-2x-FSs"/>
-                                                </constraints>
-                                            </view>
-                                            <view contentMode="scaleToFill" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Z7H-xm-cQL">
-                                                <rect key="frame" x="196" y="0.0" width="192" height="50"/>
-                                                <subviews>
-                                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="PqQ-PG-LaR">
-                                                        <rect key="frame" x="0.0" y="0.0" width="192" height="50"/>
-                                                        <subviews>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oyJ-0Z-3px">
-                                                                <rect key="frame" x="0.0" y="16.5" width="6.5" height="17"/>
-                                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                                <nil key="textColor"/>
-                                                                <nil key="highlightedColor"/>
-                                                            </label>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="following" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Thx-4f-gMH">
-                                                                <rect key="frame" x="141" y="18" width="51" height="14.5"/>
-                                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                                                <nil key="textColor"/>
-                                                                <nil key="highlightedColor"/>
-                                                            </label>
-                                                        </subviews>
-                                                    </stackView>
-                                                </subviews>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                                <constraints>
-                                                    <constraint firstItem="PqQ-PG-LaR" firstAttribute="leading" secondItem="Z7H-xm-cQL" secondAttribute="leading" id="42t-qe-hoO"/>
-                                                    <constraint firstAttribute="bottom" secondItem="PqQ-PG-LaR" secondAttribute="bottom" id="BHP-QC-1L6"/>
-                                                    <constraint firstItem="PqQ-PG-LaR" firstAttribute="top" secondItem="Z7H-xm-cQL" secondAttribute="top" id="FgE-r9-nyo"/>
-                                                    <constraint firstAttribute="trailing" secondItem="PqQ-PG-LaR" secondAttribute="trailing" id="zfm-rY-S5x"/>
-                                                </constraints>
-                                            </view>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tg9-ji-fZ5">
+                                                <rect key="frame" x="0.0" y="0.0" width="45" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="()" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1gK-Vp-bNc">
+                                                <rect key="frame" x="18" y="22.5" width="9.5" height="14.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" placeholderIntrinsicWidth="59.5" placeholderIntrinsicHeight="16" distribution="equalSpacing" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="PqQ-PG-LaR">
+                                        <rect key="frame" x="0.0" y="45" width="59.5" height="16"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oyJ-0Z-3px">
+                                                <rect key="frame" x="0.0" y="0.0" width="6.5" height="16"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="following" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Thx-4f-gMH">
+                                                <rect key="frame" x="8.5" y="0.0" width="51" height="16"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" placeholderIntrinsicWidth="59.5" placeholderIntrinsicHeight="17" distribution="equalSpacing" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="o3A-Cp-Aot">
+                                        <rect key="frame" x="0.0" y="69" width="59.5" height="17"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Q5-oT-L6v">
+                                                <rect key="frame" x="0.0" y="0.0" width="6.5" height="17"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="followers" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nkh-7j-PQg">
+                                                <rect key="frame" x="8.5" y="0.0" width="51" height="17"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
                                         </subviews>
                                     </stackView>
                                 </subviews>
@@ -116,6 +98,7 @@
                 <outlet property="avatarImage" destination="ekU-gq-ktT" id="c8F-y2-FW9"/>
                 <outlet property="followersLabel" destination="7Q5-oT-L6v" id="rUj-BT-OQC"/>
                 <outlet property="followingLabel" destination="oyJ-0Z-3px" id="Tx3-YX-uVP"/>
+                <outlet property="fullNameLabel" destination="1gK-Vp-bNc" id="pDh-la-mzs"/>
                 <outlet property="nameLabel" destination="Tg9-ji-fZ5" id="nXX-N5-EU9"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="166.07142857142856"/>
@@ -123,9 +106,6 @@
     </objects>
     <resources>
         <image name="person.fill" catalog="system" width="128" height="120"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="systemGray2Color">
             <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
